# verilog2factorio

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  benchmark.sh  benchmark_placement.sh  build_all.sh  env.bash  index.html  rustfmt.toml  yosys.dockerfile
.devcontainer/: devcontainer.json  dockerfile  onPostCreate.sh  riscv.dockerfile
.github/workflows/: rust.yml
assets/: manifest.json  sw.js
examples/: alu_example.rs  basics_example.rs  riscv.rs  riscv_sys_verify.rs  yosys_example.rs
examples/lua/: basics.lua
hyperparameter/: .gitignore  main.py  pyproject.toml  run
mods/circuit-net-tracer/: control.lua  info.json
output/: dense_memory_n_mcmc_dense.json
src/: checked_design.rs  connected_design.rs  gui.rs  lib.rs  logical_design.rs  lua.rs  main.rs  mapped_design.rs  model_checker.rs  ndarr.rs  phy.rs  physical_design.rs  physical_partitioner.rs  physical_planning.rs  sample.json  serializable_design.rs  signal_lookup_table.rs  sim.rs  svg.rs  three-input-xor.json  timing_engine.rs  util.rs  v2f_api.lua
src/checked_design/: checked_design_optimizations.rs
src/logical_design/: arithmetic_parser.rs  decider_parser.rs
src/lua/: physical_ensemble.rs
src/phy/: config.rs  design.rs  partition.rs  placement.rs  placement2.rs  route.rs
src/script/: partition_n_synthetic.sh
src/sim/: decider_model.rs  snapshot.rs  tui.rs  vcd.rs
src/tests/: checked_design_tests.rs  logical_design_tests.rs  lua.rs  mod.rs  sim_tests.rs
techmap/: memory_primitives.txt  mult_fragment_test.v  v2f_extract.v  v2f_narrowing.v  v2f_simplify.v  v2f_techmap.v
test_designs/: .gitignore  balancer.v  complex_expr.v  complex_expr.ys  lut_small.v  lut_small_alternate.v  makevcd  memory.v  single_dff.v  swizzle.v  test1.v  test1.ys  test10_memory_multiport.v  test10_memory_multiport.ys  test11_ram_multiport.v  test11_ram_multiport.ys  test12_fragment_mult.v  test12_fragment_mult.ys  test13.ys  test13_primitives.v  test2.v  test2.ys  test3.v  test3.ys  test4.ys  test5.ys  test6.ys  test7.ys  test8_memory.v  test8_memory.ys  test8_memory_hex.txt  test9_small_lut_alternate.ys
test_designs/adffe/: .adffe_tb.vcd  adffe.lua  adffe.v  adffe_rtl.json  adffe_rtl_map.json  adffe_tb.v  blueprint.json  checked_design.dot  mapping.ys  rtl.ys  tb_obj  worst_path.dot
test_designs/compare/: blueprint.json  checked_design.dot  compare.lua  compare.v  compare_rtl.json  compare_rtl_map.json  compare_tb.v  mapping.ys  rtl.ys  worst_path.dot
test_designs/counter32/: .counter_tb.vcd  blueprint.json  checked_design.dot  counter.lua  counter.v  counter_rtl.json  counter_rtl_map.json  counter_tb.v  mapping.ys  tb_obj  worst_path.dot
test_designs/counter32_pt2/: blueprint.json  checked_design.dot  counter.v  counter_pt2.lua  counter_rtl.json  counter_rtl_map.json  mapping.ys  rtl.ys  worst_path.dot
test_designs/decider_expressions/: decider_expressions.lua
test_designs/div/: blueprint.json  checked_design.dot  div.lua  div.v  div_rtl.json  div_rtl_map.json  div_tb.v  mapping.ys  rtl.ys  worst_path.dot
test_designs/memories/: memories.lua  memories.v  (+3 more)
tests/: basics_example.rs  test_designs.rs  yosys_example.rs
v2flib/: mapping.ys  rtl.ys  sim.ys  techmap.ys  v2f_memory.lib  v2f_primitives.lib  v2f_primitives.v  v2f_programmable_ram.v  v2f_rolling_accumulate.v
(+119 files in other folders)
