[package]
name = "v2f"
version = "0.1.0"
edition = "2021"

[lib]
name = "v2f"
path = "src/lib.rs"

[[bin]]
name = "v2f"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
hashers = "1.0.1"
itertools = "0.13.0"
metis = { version = "0.2.2", features = ["use-system"] }
mlua = { version = "0.10.3", features = ["lua54"] }
mlua-sys = { version = "0.6.7", features = ["lua54"] }
nalgebra = { version = "0.33.2" }
once_cell = "1.20.3"
rand = "0.9.0"
rayon = "1.10.0"
rustyline = "15.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[profile.perf]
inherits = "release"
debug = true

[profile.dev]
overflow-checks = false

[features]
solve_as_mcmc_dense = []
print_route_commit = []