[package]
name = "v2f"
version = "0.1.0"
edition = "2021"

[lib]
name = "v2f"
path = "src/lib.rs"

[[bin]]
name = "v2f"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
graphviz-rust = "0.9.5"
hashers = "1.0.1"
itertools = "0.13.0"
metis = { version = "0.2.2", features = ["use-system"] }
mlua = { version = "0.10.3", features = ["lua54"] }
mlua-sys = { version = "0.6.7", features = ["lua54"] }
nalgebra = { version = "0.33.2" }
once_cell = "1.20.3"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.2"
rustyline = "15.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.9.5"
vcd = "0.7.0"

[profile.perf]
inherits = "dev"
lto = true
codegen-units = 1
debug = true
strip = false
opt-level = 1

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false

[features]
solve_as_mcmc_dense = []
print_route_commit = []
